@@ -1,3 +1,7 @@
+Oct 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- cleaned up get_custom_arguments
+- custom_arg_count no longer neccessary
+
 Oct 11, 2002: Alex Burger <alex@fragit_dot_net>
 - Modified q3_exec to call find_game_dir using quake3_data_dir
 - Added NULL checks to find_game_dir
